Actualizacion de proyecto
proyecto terminado con ver saldo, depositar y retirar saldo

--- a/src/main/webapp/META-INF/web.xml
+++ b/src/main/webapp/META-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>alkewallet_mvc</display-name>
+  <display-name>alkewallet_mvc2</display-name>
 
 	<servlet>
 		<servlet-name>s1</servlet-name>
@@ -64,15 +64,6 @@
 		<servlet-name>s7</servlet-name>
 		<url-pattern>/ValidarLogin</url-pattern>
 	</servlet-mapping>
-	
-	<servlet>
-		<servlet-name>s8</servlet-name>
-		<servlet-class>controller.HomeController</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>s8</servlet-name>
-		<url-pattern>/home</url-pattern>
-	</servlet-mapping>	
 
   <!-- CREAR WELCOME FILE LIST -->
 	<welcome-file-list>
