--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/Users/leal_/eclipse-workspace/alkewallet_mvc/src/main/webapp/WEB-INF/lib/mysql-connector-j-8.3.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/leal_/eclipse-workspace/alkewallet_mvc/src/main/webapp/WEB-INF/lib/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leal_/eclipse-workspace/alkewallet_mvc/src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leal_/eclipse-workspace/alkewallet_mvc/src/main/webapp/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
